CIDE_Language_FJ/src/tmp/generated_fj/FJParser.java
/* Generated By:JavaCC: Do not edit this line. FJParser.java */
package tmp.generated_fj;
import java.io.*;
import java.util.*;
import cide.gast.*;
import cide.gparser.*;


/**
 * Grammar to parse Java version 1.5
 * @author Sreenivasa Viswanadha - Simplified and enhanced for 1.5
 */
public class FJParser implements FJParserConstants {
   public FJParser(String fileName)
   {
      this(System.in);
      try { ReInit(new FileInputStream(new File(fileName))); }
      catch(Exception e) { e.printStackTrace(); }
   }

  public static void main(String args[]) {
    FJParser parser;
    if (args.length == 0) {
      System.out.println("Featherweigth Java Parser Version 1.1:  Reading from standard input . . .");
      parser = new FJParser(System.in);
    } else if (args.length == 1) {
      System.out.println("Featherweigth Java Parser Version 1.1:  Reading from file " + args[0] + " . . .");
      try {
        parser = new FJParser(new java.io.FileInputStream(args[0]));
      } catch (java.io.FileNotFoundException e) {
        System.out.println("Featherweigth Java Parser Version 1.1:  File " + args[0] + " not found.");
        return;
      }
    } else {
      System.out.println("Featherweigth Java Parser Version 1.1:  Usage is one of:");
      System.out.println("         java JavaParser < inputfile");
      System.out.println("OR");
      System.out.println("         java JavaParser inputfile");
      return;
    }
    try {
      parser.Goal();
      System.out.println("Featherweigth Java Parser Version 1.1:  Java program parsed successfully.");
    } catch (ParseException e) {
      System.out.println(e.getMessage());
      System.out.println("Featherweigth Java Parser Version 1.1:  Encountered errors during parse.");
      e.printStackTrace(System.out);
    }
  }

  public FJParser(InputStream inputStream) {
        this(new OffsetCharStream(inputStream));
  }
  private void ReInit(InputStream inputStream) {
        ReInit(new OffsetCharStream(inputStream));
  }

   public ISourceFile getRoot() throws ParseException {
                return Goal();
   }

  final public Goal Goal() throws ParseException {
        TypeDeclaration typeDeclaration;
        Token t;
        ASTStringNode eof;
        Token firstToken=token;
    typeDeclaration = TypeDeclaration();
    t = jj_consume_token(0);
                                                  eof=new ASTStringNode(t.toString(),new WToken(t));
         {if (true) return new Goal(typeDeclaration, eof, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public TypeDeclaration TypeDeclaration() throws ParseException {
        Token t;
        ASTStringNode identifier;
        ExtendedType extendedType;
        VarDeclaration varDeclaration;
        ArrayList<VarDeclaration> varDeclarationList = new ArrayList<VarDeclaration>();
        ClassConstructor classConstructor;
        MethodDeclaration methodDeclaration;
        ArrayList<MethodDeclaration> methodDeclarationList = new ArrayList<MethodDeclaration>();
        Token firstToken=token;
    jj_consume_token(CLASS);
    t = jj_consume_token(IDENTIFIER);
                               identifier=new ASTStringNode(t.toString(),new WToken(t));
    jj_consume_token(EXTENDS);
    extendedType = ExtendedType();
    jj_consume_token(LBRACE);
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      varDeclaration = VarDeclaration();
                                                                                                                                                                                  varDeclarationList.add(varDeclaration);
    }
    classConstructor = ClassConstructor();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OBJECT:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_2;
      }
      methodDeclaration = MethodDeclaration();
                                                                                                                                                                                                                                                                                                        methodDeclarationList.add(methodDeclaration);
    }
    jj_consume_token(RBRACE);
         {if (true) return new TypeDeclaration(identifier, extendedType, varDeclarationList, classConstructor, methodDeclarationList, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public ExtendedType ExtendedType() throws ParseException {
        Token t;
        ASTStringNode identifier;
        Token firstToken=token;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
                       identifier=new ASTStringNode(t.toString(),new WToken(t));
         {if (true) return new ExtendedType1(identifier, firstToken.next,token);}
      break;
    case OBJECT:
      jj_consume_token(OBJECT);
         {if (true) return new ExtendedType2(firstToken.next,token);}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public VarDeclaration VarDeclaration() throws ParseException {
        Type type;
        Token t;
        ASTStringNode identifier;
        Token firstToken=token;
    type = Type();
    t = jj_consume_token(IDENTIFIER);
                                   identifier=new ASTStringNode(t.toString(),new WToken(t));
    jj_consume_token(38);
         {if (true) return new VarDeclaration(type, identifier, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public ClassConstructor ClassConstructor() throws ParseException {
        Type type;
        FormalParameterList formalParameterList = null;
        ExpressionList expressionList = null;
        FieldAssign fieldAssign;
        ArrayList<FieldAssign> fieldAssignList = new ArrayList<FieldAssign>();
        Token firstToken=token;
    type = Type();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OBJECT:
    case INT:
    case IDENTIFIER:
      formalParameterList = FormalParameterList();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    jj_consume_token(SUPER);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case THIS:
    case NEW:
    case INTEGER_LITERAL:
    case IDENTIFIER:
    case LPAREN:
      expressionList = ExpressionList();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(38);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case THIS:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      fieldAssign = FieldAssign();
                                                                                                                                                             fieldAssignList.add(fieldAssign);
    }
    jj_consume_token(RBRACE);
         {if (true) return new ClassConstructor(type, formalParameterList, expressionList, fieldAssignList, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public FieldAssign FieldAssign() throws ParseException {
        Token t;
        ASTStringNode identifier;
        ASTStringNode identifier1;
        Token firstToken=token;
    jj_consume_token(THIS);
    jj_consume_token(DOT);
    t = jj_consume_token(IDENTIFIER);
                                  identifier=new ASTStringNode(t.toString(),new WToken(t));
    jj_consume_token(39);
    t = jj_consume_token(IDENTIFIER);
                                                                                                                identifier1=new ASTStringNode(t.toString(),new WToken(t));
    jj_consume_token(38);
         {if (true) return new FieldAssign(identifier, identifier1, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public MethodDeclaration MethodDeclaration() throws ParseException {
        Type type;
        Token t;
        ASTStringNode identifier;
        FormalParameterList formalParameterList = null;
        Expression expression;
        Token firstToken=token;
    type = Type();
    t = jj_consume_token(IDENTIFIER);
                                   identifier=new ASTStringNode(t.toString(),new WToken(t));
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OBJECT:
    case INT:
    case IDENTIFIER:
      formalParameterList = FormalParameterList();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    jj_consume_token(RETURN);
    expression = Expression();
    jj_consume_token(38);
    jj_consume_token(RBRACE);
         {if (true) return new MethodDeclaration(type, identifier, formalParameterList, expression, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public BinaryOperator BinaryOperator() throws ParseException {
        Token firstToken=token;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
         {if (true) return new BinaryOperator1(firstToken.next,token);}
      break;
    case MINUS:
      jj_consume_token(MINUS);
         {if (true) return new BinaryOperator2(firstToken.next,token);}
      break;
    case STAR:
      jj_consume_token(STAR);
         {if (true) return new BinaryOperator3(firstToken.next,token);}
      break;
    case SLASH:
      jj_consume_token(SLASH);
         {if (true) return new BinaryOperator4(firstToken.next,token);}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public FormalParameterList FormalParameterList() throws ParseException {
        FormalParameter formalParameter;
        ArrayList<FormalParameter> list0=new ArrayList<FormalParameter>();
        FormalParameter formalParameter1;
        ArrayList<FormalParameter> formalParameter1List = new ArrayList<FormalParameter>();
        Token firstToken=token;
    formalParameter = FormalParameter();
                                          list0.add(formalParameter);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      formalParameter1 = FormalParameter();
                                                                                                               list0.add(formalParameter1);
    }
         {if (true) return new FormalParameterList(list0, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public FormalParameter FormalParameter() throws ParseException {
        Type type;
        Token t;
        ASTStringNode identifier;
        Token firstToken=token;
    type = Type();
    t = jj_consume_token(IDENTIFIER);
                                   identifier=new ASTStringNode(t.toString(),new WToken(t));
         {if (true) return new FormalParameter(type, identifier, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {
        Token t;
        ASTStringNode identifier;
        Token firstToken=token;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
         {if (true) return new Type1(firstToken.next,token);}
      break;
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
                       identifier=new ASTStringNode(t.toString(),new WToken(t));
         {if (true) return new Type2(identifier, firstToken.next,token);}
      break;
    case OBJECT:
      jj_consume_token(OBJECT);
         {if (true) return new Type3(firstToken.next,token);}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expression Expression() throws ParseException {
        Term term;
        PlusOrMinus plusOrMinus;
        ArrayList<PlusOrMinus> plusOrMinusList = new ArrayList<PlusOrMinus>();
        Token firstToken=token;
    term = Term();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
      plusOrMinus = PlusOrMinus();
                                               plusOrMinusList.add(plusOrMinus);
    }
         {if (true) return new Expression(term, plusOrMinusList, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public PlusOrMinus PlusOrMinus() throws ParseException {
        PlusExpressionRest plusExpressionRest;
        MinusExpressionRest minusExpressionRest;
        Token firstToken=token;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      plusExpressionRest = PlusExpressionRest();
         {if (true) return new PlusOrMinus1(plusExpressionRest, firstToken.next,token);}
      break;
    case MINUS:
      minusExpressionRest = MinusExpressionRest();
         {if (true) return new PlusOrMinus2(minusExpressionRest, firstToken.next,token);}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public PlusExpressionRest PlusExpressionRest() throws ParseException {
        Term term;
        Token firstToken=token;
    jj_consume_token(PLUS);
    term = Term();
         {if (true) return new PlusExpressionRest(term, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public MinusExpressionRest MinusExpressionRest() throws ParseException {
        Term term;
        Token firstToken=token;
    jj_consume_token(MINUS);
    term = Term();
         {if (true) return new MinusExpressionRest(term, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public Term Term() throws ParseException {
        PrimaryExpression primaryExpression;
        TimesOrDivide timesOrDivide;
        ArrayList<TimesOrDivide> timesOrDivideList = new ArrayList<TimesOrDivide>();
        Token firstToken=token;
    primaryExpression = PrimaryExpression();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
      case SLASH:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_6;
      }
      timesOrDivide = TimesOrDivide();
                                                                             timesOrDivideList.add(timesOrDivide);
    }
         {if (true) return new Term(primaryExpression, timesOrDivideList, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public TimesOrDivide TimesOrDivide() throws ParseException {
        TimesExpressionRest timesExpressionRest;
        DivideExpressionRest divideExpressionRest;
        Token firstToken=token;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STAR:
      timesExpressionRest = TimesExpressionRest();
         {if (true) return new TimesOrDivide1(timesExpressionRest, firstToken.next,token);}
      break;
    case SLASH:
      divideExpressionRest = DivideExpressionRest();
         {if (true) return new TimesOrDivide2(divideExpressionRest, firstToken.next,token);}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public TimesExpressionRest TimesExpressionRest() throws ParseException {
        PrimaryExpression primaryExpression;
        Token firstToken=token;
    jj_consume_token(STAR);
    primaryExpression = PrimaryExpression();
         {if (true) return new TimesExpressionRest(primaryExpression, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public DivideExpressionRest DivideExpressionRest() throws ParseException {
        PrimaryExpression primaryExpression;
        Token firstToken=token;
    jj_consume_token(SLASH);
    primaryExpression = PrimaryExpression();
         {if (true) return new DivideExpressionRest(primaryExpression, firstToken.next,token);}
    throw new Error("Missing return statement in function");
  }

  final public PrimaryExpression PrimaryExpression() throws ParseException {
        Token t;
        ASTStringNode integer_literal;
        MethodInvoke methodInvoke;
        FieldInvoke fieldInvoke;
        ASTStringNode identifier;
        AllocationExpression allocationExpression;
        CastExpression castExpression;
        NestedExpression nestedExpression;
        Token firstToken=token;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      t = jj_consume_token(INTEGER_LITERAL);
